--- a/Index.html
+++ b/Index.html
@@ -27,10 +27,10 @@
           <div class="collapse navbar-collapse " id="b23" >
         <ul class="nav">
       <li class="nav-item" >
-          <a  class="nav-link" href="Home.html">Home</a>
+          <a  class="nav-link" href="">Home</a>
       </li>
       <li class="nav-item" >
-          <a class="nav-link" href="">Aboutus</a>
+          <a class="nav-link" href="Aboutus.html">Aboutus</a>
       </li>
       <li class="nav-item" >
           <a class="nav-link" href="ContactUs.html">Contactus</a>
