--- a/Aboutus.html
+++ b/Aboutus.html
@@ -24,10 +24,13 @@
           <a class="nav-link" href="">Aboutus</a>
       </li>
       <li class="nav-item" >
-          <a class="nav-link" href="ContactUs.html">Contactus</a>
+          <a class="nav-link" href="sampleview.html">sampleview</a>
       </li>
       <li class="nav-item" >
         <a class="nav-link" href="Gallery.html">Gallery</a>
+    </li>
+    <li class="nav-item" >
+        <a class="nav-link" href="Contactus.html">Contactus</a>
     </li>
   </ul>
   </div>
