--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
             <span  class="navbar-toggler-icon"></span>
   
         </button>
-          <div class="collapse navbar-collapse " id="b23" >
+          <div class="collapse navbar-collapse" id="b23" >
         <ul class="nav">
       <li class="nav-item" >
           <a  class="nav-link" href="">Home</a>
@@ -34,10 +34,13 @@
           <a class="nav-link" href="Aboutus.html">Aboutus</a>
       </li>
       <li class="nav-item" >
-          <a class="nav-link" href="ContactUs.html">Contactus</a>
+          <a class="nav-link" href="sampleview">sampleview</a>
       </li>
       <li class="nav-item" >
         <a class="nav-link" href="Gallery.html">Gallery</a>
+    </li>
+    <li class="nav-item" >
+        <a class="nav-link" href="Contactus.html">Contactus</a>
     </li>
   </ul>
   </div>
