--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="Aboutus.html">Aboutus</a>
       </li>
       <li class="nav-item" >
-          <a class="nav-link" href="sampleview">sampleview</a>
+          <a class="nav-link" href="sampleview.html">sampleview</a>
       </li>
       <li class="nav-item" >
         <a class="nav-link" href="Gallery.html">Gallery</a>
